--- a/swagger-ui.html
+++ b/swagger-ui.html
@@ -5,6 +5,7 @@ permalink: /swagger-ui
 ---
 
 <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5/swagger-ui.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Amoenus/SwaggerDark/SwaggerDark.css">
 <style>
   .swagger-ui .topbar { display: none; }
   .swagger-ui .info { margin: 20px 0; }
